Resolve "Wiki ab 5.5: Fehler nach dem Merge im Main"
Closes #3652

Merge request studip/studip!2535

--- a/resources/assets/stylesheets/scss/variables.scss
+++ b/resources/assets/stylesheets/scss/variables.scss
@@ -171,6 +171,10 @@ $grid-gap: 0;
     #{"--"}group-color-7: $petrol;
     #{"--"}group-color-8: $brown;
 
+    #{"--"}avatar-small: $avatar-small;
+    #{"--"}avatar-medium: $avatar-medium;
+    #{"--"}avatar-normal: $avatar-normal;
+
     #{"--"}transition-duration: $transition-duration;
     #{"--"}transition-duration-slow: $transition-duration-slow;
 
