--- a/resources/assets/stylesheets/less/buttons.less
+++ b/resources/assets/stylesheets/less/buttons.less
@@ -128,10 +128,15 @@ a.button, button.button {
     padding: 0;
     vertical-align: middle;
 
-    button, .button {
+    button,
+    .button {
         float: left;
         margin-left: 5px;
         margin-right: 0;
+
+        &:first-of-type {
+            margin-left: 0;
+        }
     }
 }
 
